Fixing white space under footer

--- a/css/extra/scrolling-nav.css
+++ b/css/extra/scrolling-nav.css
@@ -62,5 +62,5 @@ of those sections to manage the look and feel of the site. */
     height: 15px;
     padding-top: 500px;
     text-align: center;
-    background: #000;
+    background: #fff
 }
